--- a/index.html
+++ b/index.html
@@ -342,6 +342,12 @@
         <div id="tool7-text">Calm Corner</div>
     </div>
 </div>
+<div id="tool8">
+    <div id="tool8-inner">
+        <img id="tool8-pic" src="images/need_help.png">
+        <div id="tool8-text">Help</div>
+    </div>
+</div>
 <div id="eraser" onclick="clearBoard()">
     <img id="erase" src="images/eraser.png">
 </div>
@@ -351,6 +357,8 @@
 <div id="better-display">
     <img id="get-better" src="images/get-better.png">
 </div>
+<div id="option1"><span id="open-need">Need</span> something?</div>
+<div id="option2"><span style="text-transform:uppercase; font-weight:bold;">Explain</span> and <span style="text-transform: uppercase; font-weight:bold;">Plan</span></div>
 <!-- Self Regulation Needs End -->
 
 <script>
@@ -451,8 +459,8 @@
       need4.style.display="flex";
       need5.style.display="flex";
       hurts.style.display="flex";
-      needTitle.style.display="none";
-      ifeel.style.display="none";
+    //   needTitle.style.display="none";
+    //   ifeel.style.display="none";
     //   bodyfeels.style.display="none";
     }
     else{
@@ -494,6 +502,7 @@
     var tool5 = document.getElementById('tool5');
     var tool6 = document.getElementById('tool6');
     var tool7 = document.getElementById('tool7');
+    var tool8 = document.getElementById('tool8');
     var choice = document.getElementById('choice');
     // var emotion = document.getElementById('emotion');
     // var emotion2 = document.getElementById('emotion2');
@@ -534,6 +543,7 @@
       tool5.style.display = "flex";
       tool6.style.display = "flex";
       tool7.style.display = "flex";
+      tool8.style.display = "flex";
     //   emotion.style.display= "none";
     //   emotion2.style.display= "none";
     //   emotion3.style.display= "none";
@@ -548,8 +558,8 @@
     //   need5.style.display="none";
     //   hurts.style.display="none";
     //   needTitle.style.display="none";
-      ifeel.style.display="none";
-      bodyfeels.style.display="none";
+    //   ifeel.style.display="none";
+    //   bodyfeels.style.display="none";
     //   sick1.style.display="none";
     //   sick2.style.display="none";
     //   sick3.style.display="none";
@@ -574,6 +584,7 @@
       tool5.style.display = "none";
       tool6.style.display = "none";
       tool7.style.display = "none";
+      tool8.style.display = "none";
     //   emotion2.style.display= "none";
     //   emotion3.style.display= "none";
     //   emotion4.style.display= "none";
@@ -912,6 +923,8 @@
         document.getElementById('emotion2').style.webkitTransition="all .15s ease-in-out";
         document.getElementById('emotion2').style.transition="all .15s ease-in-out";
         document.getElementById('emotion2').style.boxShadow="0 0 10px 0 #4d4dff inset, 0 0 20px 2px #4d4dff";
+        document.getElementById('option1').style.display="block";
+        document.getElementById('option2').style.display="block";
     }
 </script>
 <script>
@@ -919,6 +932,8 @@
         document.getElementById('emotion3').style.webkitTransition="all .15s ease-in-out";
         document.getElementById('emotion3').style.transition="all .15s ease-in-out";
         document.getElementById('emotion3').style.boxShadow="0 0 10px 0 #ff0000 inset, 0 0 20px 2px #ff0000";
+        document.getElementById('option1').style.display="block";
+        document.getElementById('option2').style.display="block";
     }
 </script>
 <script>
@@ -965,6 +980,8 @@
         document.getElementById('emotion6').style.boxShadow="none";
         document.getElementById('happy-display').style.display="none";
         document.getElementById('better-display').style.display="none";
+        document.getElementById('option1').style.display="none";
+        document.getElementById('option2').style.display="none";
 
     }
 </script>
